--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Title of your CV site
-profile_img: assets/img/profile.webp
+profile_img: assets/img/profilenew.webp
 icon_img: assets/img/icon.webp
 
 name: "Your Name Here"
