--- a/_config.yml
+++ b/_config.yml
@@ -7,12 +7,12 @@ job: "〈MSc Student | WIS〉"
 
 phone_number: 07777777777
 address: Rehovot, Israel
-email: email@example.com
-linkedin_username: linkedin
-github_username: github
-instagram_username: instagram
+email: faratj.mazal@gmail.com
+linkedin_username: Mazal Faraj
+github_username: mazalik
+instagram_username: mazalfaraj
 twitter_username: twitter
-facebook_username: facebook
+facebook_username: Mazal Faraj
 youtube_username: youtube
 blog_url: homepage-url
 
