--- a/_data/Education.yml
+++ b/_data/Education.yml
@@ -2,17 +2,10 @@ subject: Education
 listing-order: 1
 icon: "/assets/img/graduation-cap.svg"
 contents:
-  - title: Farvard University, PhD in Computer Science
+
+  - title: Weizmann Institute of Science, MSc student | life sciences
     description:
-      - Design of a method to build a probabilistic generative model
-      - Development of model calibration algorithm for cross-domain few-shot learning
-    date: Mar. 2019 - Aug. 2023
-  - title: Stanfort University, MA in Computer Science
-    description:
-      - Development of deep learning algorithms for automatically tracking the facial expressions
-      - Optimizing parameter efficient fine tuning for fairness in medical image analysis
-    grade: "**GPA**: `4.1/4.3`"
-    date: Mar. 2014 - Feb. 2016
-  - title: Kambridge University, BA in Electronic Engineering
-    grade: "**GPA**: `3.9/4.3`"
-    date: Mar. 2010 - Feb. 2014
+      - Enthusiastic about innovative treatments for diseases and aspire to lead research to develop biological medicines.
+    date: Oct. 2023 - Today 
+  - title: Technion, BSc in Biotechnology & Food Engineering
+    date: Oct. 2019 - Jun. 2023
