--- a/_data/Education.yml
+++ b/_data/Education.yml
@@ -3,7 +3,7 @@ listing-order: 1
 icon: "/assets/img/graduation-cap.svg"
 contents:
 
-  - title: Weizmann Institute of Science, MSc student | life sciences
+  - title: Weizmann Institute of Science, MSc student - life sciences
     description:
       - Enthusiastic about innovative treatments for diseases and aspire to lead research to develop biological medicines.
     date: Oct. 2023 - Today 
