--- a/_data/Experience.yml
+++ b/_data/Experience.yml
@@ -2,21 +2,16 @@ subject: Experiences
 listing-order: 2
 icon: "/assets/img/briefcase.svg"
 contents:
-  - title: Nanosoft
-    role: Project Manager
-    description:
-      - Led development of a new chatbot software utilizing large language model
-      - Co-designer of '*Kopilot*' and '*Gemmini*'
-    date: Jan. 2024 - Ongoing
-  - title: Amazone
-    role: Senior Software Engineer
+  - title: MAOLAC
+    role: R&D Technologist
+    date: Jan. 2023 - Oct. 2023
+  - title: Technion - Israel Institute of Technology
+    role: Laboratory Assistant
     description: 
-      - Built a Java microservice, database schema to manage customer accounts
-      - Enhanced internal pipelines to query real-time data from client devices
-    date: Apr. 2016 - Dec. 2018
-  - title: Pacebook
-    role: Software Engineer Intern
+      - Prof. Marcelle Machluf’s lab 
+    date: Mar. 2021 - May. 2023
+  - title: Weizmann Institute of Science
+    role: Internship 
     description: 
-      - Designed the dynamic website using React for data visualization
-      - Integrated '*Yolo*' to boost the accuracy of the object detection
-    date: Jul. 2013 - Sep. 2013
+      - Summer Internship, Young researchers at Prof. Tzachi Pilpel Genome and Systems Biology lab
+    date: Jul. 2021 - Sep. 2021
