--- a/_data/Projects.yml
+++ b/_data/Projects.yml
@@ -2,12 +2,11 @@ subject: Projects
 listing-order: 3
 icon: "/assets/img/clipboard-list.svg"
 contents:
-  - title: "ChatPPT ([https://chat.opena1.com/](https://chat.openai.com/))"
+  - title: "Angel Roots"
     description: 
-      - Chatbot developed based on a large language model
-      - Designed Generative algorithm to generate novel human-like content
-      - "Technology Used: Rust, Typescript, Python, Ruby"
-    image: "![](https://i.ibb.co/hX2wYLB/231321.webp)"
+      - From plants to bacterial cells, biomanufacturing decursin to treat chemotherapy-induced alopecia (CIA)
+      - IGEM 2022
+      - https://2022.igem.wiki/technion-israel/
   - title: "AW5-cli ([https://github.com/aw5/aw5-cli](https://github.com/aws/aws-cli))"
     description: 
       - Universal Command Line Interface for Amazone Web Services
