--- a/_data/Skills.yml
+++ b/_data/Skills.yml
@@ -1,3 +1,12 @@
 subject: Python course 2024
 listing-order: 5
 icon: "/assets/img/screwdriver-wrench.svg"
+contents:
+bla
+  - title: "Assignmets"
+    description: 
+      - My assigmnent page is ([https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/))
+    - title: "Additional git page"
+    description: 
+      - Check out Omer Zachar's git page at ([https://omerzachar.github.io/](https://omerzachar.github.io/))
+      
