--- a/_data/Skills.yml
+++ b/_data/Skills.yml
@@ -4,4 +4,4 @@ icon: "/assets/img/screwdriver-wrench.svg"
 contents:
   - title: "Assignmets"
     description: 
-      - My assigmnent page is ([https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/))
+      - My assigmnent page is [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
