--- a/_data/Skills.yml
+++ b/_data/Skills.yml
@@ -5,3 +5,6 @@ contents:
   - title: "Assignmets"
     description: 
       - My assigmnent page is [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
+  - title: "Assignmets"
+    description: 
+      - My assigmnent page is [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
