--- a/_data/Skills.yml
+++ b/_data/Skills.yml
@@ -5,6 +5,6 @@ contents:
   - title: "Assignmets"
     description: 
       - My assigmnent page is [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
-  - title: "Assignmets"
+  - title: "Additional git page"
     description: 
-      - My assigmnent page is [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
+      - Check out Omer Zachar's git page at ([https://omerzachar.github.io/](https://omerzachar.github.io/))
