--- a/_data/Skills.yml
+++ b/_data/Skills.yml
@@ -7,4 +7,4 @@ contents:
       - My assigmnent page is [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
   - title: "Additional git page"
     description: 
-      - Check out Omer Zachar's git page at ([https://omerzachar.github.io/](https://omerzachar.github.io/))
+      - Check out Omer Zachar's git page at [https://omerzachar.github.io/](https://omerzachar.github.io/)
