--- a/_data/Skills.yml
+++ b/_data/Skills.yml
@@ -4,7 +4,7 @@ icon: "/assets/img/screwdriver-wrench.svg"
 contents:
   - title: "Assignmets"
     description: 
-      - My assigmnent page is [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
+      - My assigmnent page is [https://mazalik.github.io/pythoncourse2024](https://mazalik.github.io/pythoncourse2024)
   - title: "Additional git page"
     description: 
       - Check out Omer Zachar's git page at [https://omerzachar.github.io/](https://omerzachar.github.io/)
