--- a/_data/Skills.yml
+++ b/_data/Skills.yml
@@ -2,7 +2,7 @@ subject: Python course 2024
 listing-order: 5
 icon: "/assets/img/screwdriver-wrench.svg"
 contents:
-  - title: "Assignmets"
+  - title: "Course Page"
     description: 
       - Check out my course page at [https://mazalik.github.io/pythoncourse2024](https://mazalik.github.io/pythoncourse2024)
   - title: "Additional git page"
