--- a/_data/Education.yml
+++ b/_data/Education.yml
@@ -7,6 +7,7 @@ contents:
     description:
       - Enthusiastic about innovative treatments for diseases and aspire to lead research to develop biological medicines.
       - Currently in rotation at Dr. Moshe Biton's lab - [https://www.weizmann.ac.il/dept/irb/Biton/home](https://www.weizmann.ac.il/dept/irb/Biton/home)
+        We are working on epithelial MHC-II presentation in the gut.
     date: Oct. 2023 - Today 
   - title: Technion, BSc in Biotechnology & Food Engineering
     date: Oct. 2019 - Jun. 2023
