--- a/_data/Publications.yml
+++ b/_data/Publications.yml
@@ -3,5 +3,4 @@ listing-order: 4
 icon: "/assets/img/flask.svg"
 contents:
     description: 
-      - From plants to bacterial cells, biomanufacturing decursin to treat chemotherapy-induced alopecia (CIA)
-      - IGEM 2022 [https://2022.igem.wiki/technion-israel/](https://2022.igem.wiki/technion-israel/)
+      - I like working out, hiking, baking, chasing afetr sunsets, and spending time with friends and family.
