--- a/_data/Publications.yml
+++ b/_data/Publications.yml
@@ -3,4 +3,4 @@ listing-order: 4
 icon: "/assets/img/flask.svg"
 contents:
     description: 
-      - I like working out, hiking, baking, chasing afetr sunsets, and spending time with friends and family.
+      - Prof. Marcelle Machluf’s lab 
