--- a/_data/Publications.yml
+++ b/_data/Publications.yml
@@ -4,4 +4,4 @@ icon: "/assets/img/flask.svg"
 contents:
     description: 
       - 
-      - I
+      - I like working out, hiking, baking, chasing sunsets, and spending time with friends and family.
